cabal-version:      2.4
name:               product
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         shomasd@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable product
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    OpenSCAD
    PathExtrude

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           ^>=4.15.1.0
    , colour
    , containers
    , prettyprinter

  hs-source-dirs:     app

  -- cabal-fmt: expand ${app/}
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
